# lvgl-nav-kit

./: CMakeLists.txt  LICENSE  README.md  README_zh.md  idf_component.yml
.github/workflows/: publish-to-registry.yml
examples/esp32_lcd_touch/: README.md
examples/esp32_lcd_touch/main/: CMakeLists.txt  board_config.h  main.cc
examples/minimal/: README.md
examples/minimal/main/: CMakeLists.txt  main.cc
include/lvgl_nav_kit/: display.h  page_base.h  page_registry.h  ui_manager.h  ui_theme.h  ui_types.h
src/: display.cc  page_base.cc  page_registry.cc  ui_manager.cc  ui_theme_default.c
